Fix the link to the doc hidden by the lego image on small screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -43,10 +43,10 @@ header {
 
 #lego {
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   bottom: 120px;
   left: 0;
-  height: 70%;
+  height: 60%;
 }
 
 #logo {
